--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -5,7 +5,7 @@
         {% load static %}
         <img class="mb-4" src="{% static "mango.svg" %}" alt="" width="150" height="150">
         <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
-        <label for="inputEmail" class="sr-only">Em3ail address</label>
+        <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required
               autofocus>
         <br>
