--- a/mango/templates/index.html
+++ b/mango/templates/index.html
@@ -71,8 +71,9 @@
     <div class="main-title">
         <h2>Powered by <strong>Python</strong></h2>
     </div>
-    <div class="jarallax" data-video-src="https://youtu.be/Ym8t3yVnbkM"></div>
-
+    <div class="jarallax" data-speed="0.2">
+        <img class="jarallax-img" src="https://images.unsplash.com/photo-1522857884396-6d2c1c34e4e6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+    </div>
     <div class="main-title">
         <h2><strong>Sign Up</strong> right now</h2>
     </div>
