--- a/mango/templates/viewer/day_add.html
+++ b/mango/templates/viewer/day_add.html
@@ -19,7 +19,7 @@
             </li>
         </ul>
         <ul class="nav navbar-nav flex-row justify-content-md-center justify-content-start flex-nowrap">
-            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-user-circle"></i> Account</a></li>
+            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-user-circle"></i> You</a></li>
         </ul>
     </nav>
 
