--- a/mango/templates/viewer/day_add.html
+++ b/mango/templates/viewer/day_add.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="../day">Day</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../Calendar">Calendar</a>
+                <a class="nav-link" href="../calendar">Calendar</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../tasks">Tasks</a>
