--- a/mango/templates/viewer/day_add.html
+++ b/mango/templates/viewer/day_add.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="../day">Day</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../calendar">Calendar</a>
+                <a class="nav-link" href="../month">Month</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../tasks">Tasks</a>
@@ -78,12 +78,8 @@
               <option>5</option>
             </select>
             <br>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="true" name="today" id="defaultCheck1">
-              <label class="form-check-label" for="defaultCheck1">
-                Today task
-              </label>
-            </div>
+            <label for="date-input" class="col-2 col-form-label">Date</label>
+            <input class="form-control w-50 mx-auto" type="date" name="date" value="{{ date }}" id="date-input">
             {% for message in messages %}
                 <br>
                 <div class="alert alert-danger alert-dismissible w-50 mx-auto">
@@ -93,6 +89,7 @@
 
                 </div>
             {% endfor %}
+            <br>
             <button class="btn btn-lg btn-dark btn-block w-50 mx-auto" type="submit">Add</button>
         </form>
       </div>
