--- a/mango/templates/viewer/tasks.html
+++ b/mango/templates/viewer/tasks.html
@@ -106,6 +106,11 @@
                             {% endwith %}
                         {% endif %}
                     </p>
+                    {% if task.date_start %}
+                        <p class="card-text">
+                            {{ task.date_start|date:"M d, Y" }}
+                        </p>
+                    {% endif %}
                     <form action="{% url 'day' %}" method="post">
                         {% csrf_token %}
                         {% if not task.is_running %}
