Fix templates for support similar task

--- a/mango/templates/viewer/account.html
+++ b/mango/templates/viewer/account.html
@@ -30,13 +30,13 @@
                     <form action="{% url 'day' %}" method="post">
                         {% csrf_token %}
                         <div class="btn-group ">
-                            <button class="btn btn-dark" type="submit" name="previous" value="{{ running_task.task_name }}">
+                            <button class="btn btn-dark" type="submit" name="previous" value="{{ running_task.id }}">
                                 <i class="fa fa-backward" style="font-size: 25px; color: beige"></i>
                             </button>
-                            <button class="btn btn-dark" type="submit" name="pause" value="{{ running_task.task_name }}">
+                            <button class="btn btn-dark" type="submit" name="pause" value="{{ running_task.id }}">
                                 <i class="fa fa-pause" style="font-size: 25px; color: beige"></i>
                             </button>
-                            <button class="btn btn-dark" type="submit" name="next" value="{{ running_task.task_name }}">
+                            <button class="btn btn-dark" type="submit" name="next" value="{{ running_task.id }}">
                                 <i class="fa fa-forward" style="font-size: 25px; color: beige"></i>
                             </button>
                         </div>
